# multi-modal-loam

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  dockerfile  entrypoint.sh  package.xml
config/: backlio_viz.rviz
include/: lidars_extrinsic_cali.h
include/Estimator/: Estimator.h
include/IMUIntegrator/: IMUIntegrator.h
launch/: mm_lio_full.launch
mm-loam/: CMakeLists.txt  package.xml
mm-loam/config/: backlio_viz.rviz  sensors_suite.urdf
mm-loam/include/: lidars_extrinsic_cali.h  preprocess.h
mm-loam/include/MapManager/: Map_Manager.h
mm-loam/include/utils/: ceresfunc.h
mm-loam/launch/: mm_lio_full.launch  mm_lio_odom.launch
mm-loam/src/: unionFeatureExtract.cpp  unionLidarsAligner.cpp  unionPoseEstimation.cpp
mm-loam/src/lio/: Estimator.cpp  IMUIntegrator.cpp  Map_Manager.cpp
src/: unionFeatureExtract.cpp  unionLidarsAligner.cpp  unionPoseEstimation.cpp
src/lio/: Estimator.cpp
union-cloud/: CMakeLists.txt  package.xml
union-cloud/msg/: union_cloud.msg
