<?xml version="1.0"?>
<package>
  <name>union_cloud</name>
  <version>1.0.0</version>
  <description>The cloud_msgs package contains messages.</description>

  <maintainer email="xxx@xxx.xxx">Tixiao Shan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>livox_ros_driver</build_depend>

 <run_depend>livox_ros_driver</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>